exports[`test Should show the chaos area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <rect
      className="not-in-focus area js-area-standard"
      height="100%"
      id="chaos"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      width="100%" />
    <text
      className="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20">
      chaos
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <rect
      class="not-in-focus area js-area-standard"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <text
      class="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20"
    >
      chaos
    </text>
  </g>
</svg>
`;

exports[`test Should show the chaos area 2`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <rect
      className="in-focus area js-area-standard"
      height="100%"
      id="chaos"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      width="100%" />
    <text
      className="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20">
      chaos
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <rect
      class="in-focus area js-area-standard"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <text
      class="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20"
    >
      chaos
    </text>
  </g>
</svg>
`;

exports[`test Should show the chaos area 3`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <rect
      className="not-in-focus area js-area-standard"
      height="100%"
      id="chaos"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      width="100%" />
    <text
      className="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20">
      chaos
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <rect
      class="not-in-focus area js-area-standard"
      height="100%"
      id="chaos"
      width="100%"
    >
    </rect>
    <text
      class="area-label"
      id="label-choas"
      textAnchor="middle"
      x="50%"
      y="20"
    >
      chaos
    </text>
  </g>
</svg>
`;

exports[`test Should show the comfort area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="20%">
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%" />
    </circle>
    <text
      className="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      r="20%"
    >
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%"
      >
      </animate>
    </circle>
    <text
      class="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
</svg>
`;

exports[`test Should show the comfort area 2`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="20%">
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%" />
    </circle>
    <text
      className="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      r="20%"
    >
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%"
      >
      </animate>
    </circle>
    <text
      class="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
</svg>
`;

exports[`test Should show the comfort area 3`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="20%">
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%" />
    </circle>
    <text
      className="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%">
      comfort
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="comfort"
      r="20%"
    >
      <animate
        attributeName="r"
        attributeType="XML"
        dur="0.8s"
        from="0%"
        keyTimes="0; 0.3; 0.6; 0.8; 1"
        to="20%"
        values="0%; 25%; 18%; 21%; 20%"
      >
      </animate>
    </circle>
    <text
      class="area-label"
      id="label-comfort"
      textAnchor="middle"
      x="50%"
      y="50%"
    >
      comfort
    </text>
  </g>
</svg>
`;

exports[`test Should show the stretch area 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="45%" />
    <text
      className="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%">
      stretch
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      r="45%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%"
    >
      stretch
    </text>
  </g>
</svg>
`;

exports[`test Should show the stretch area 2`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="45%" />
    <text
      className="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%">
      stretch
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      r="45%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%"
    >
      stretch
    </text>
  </g>
</svg>
`;

exports[`test Should show the stretch area 3`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <g>
    <circle
      className="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      r="45%" />
    <text
      className="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%">
      stretch
    </text>
  </g>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <g>
    <circle
      class="not-in-focus area js-area-standard"
      cx="50%"
      cy="50%"
      id="stretch"
      r="45%"
    >
    </circle>
    <text
      class="area-label"
      id="label-stretch"
      textAnchor="middle"
      x="50%"
      y="25%"
    >
      stretch
    </text>
  </g>
</svg>
`;

exports[`test The complete comfort model 1`] = `
<svg
  height="100%"
  id="stage"
  width="100%">
  <svg
    height="100%"
    id="stage"
    width="100%">
    <g>
      <rect
        className="not-in-focus area js-area-standard"
        height="100%"
        id="chaos"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        width="100%" />
      <text
        className="area-label"
        id="label-choas"
        textAnchor="middle"
        x="50%"
        y="20">
        chaos
      </text>
    </g>
    <g
      id="zones">
      <g>
        <circle
          className="not-in-focus area js-area-standard"
          cx="50%"
          cy="50%"
          id="stretch"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          r="45%" />
        <text
          className="area-label"
          id="label-stretch"
          textAnchor="middle"
          x="50%"
          y="25%">
          stretch
        </text>
      </g>
      <g>
        <circle
          className="not-in-focus area js-area-standard"
          cx="50%"
          cy="50%"
          id="comfort"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          r="20%">
          <animate
            attributeName="r"
            attributeType="XML"
            dur="0.8s"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%; 25%; 18%; 21%; 20%" />
        </circle>
        <text
          className="area-label"
          id="label-comfort"
          textAnchor="middle"
          x="50%"
          y="50%">
          comfort
        </text>
      </g>
    </g>
    <g
      id="history" />
  </svg>
</svg>
------------HTML PREVIEW---------------
<svg
  height="100%"
  id="stage"
  width="100%"
>
  <svg
    height="100%"
    id="stage"
    width="100%"
  >
    <g>
      <rect
        class="not-in-focus area js-area-standard"
        height="100%"
        id="chaos"
        width="100%"
      >
      </rect>
      <text
        class="area-label"
        id="label-choas"
        textAnchor="middle"
        x="50%"
        y="20"
      >
        chaos
      </text>
    </g>
    <g id="zones">
      <g>
        <circle
          class="not-in-focus area js-area-standard"
          cx="50%"
          cy="50%"
          id="stretch"
          r="45%"
        >
        </circle>
        <text
          class="area-label"
          id="label-stretch"
          textAnchor="middle"
          x="50%"
          y="25%"
        >
          stretch
        </text>
      </g>
      <g>
        <circle
          class="not-in-focus area js-area-standard"
          cx="50%"
          cy="50%"
          id="comfort"
          r="20%"
        >
          <animate
            attributeName="r"
            attributeType="XML"
            dur="0.8s"
            from="0%"
            keyTimes="0; 0.3; 0.6; 0.8; 1"
            to="20%"
            values="0%; 25%; 18%; 21%; 20%"
          >
          </animate>
        </circle>
        <text
          class="area-label"
          id="label-comfort"
          textAnchor="middle"
          x="50%"
          y="50%"
        >
          comfort
        </text>
      </g>
    </g>
    <g id="history"></g>
  </svg>
</svg>
`;
